# IPM-IMC_Agent

./: .env.example  .gitignore  README.md  docker-compose.yml  已完成功能清单.md  接口契约.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  errors.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/graphs/: business_canvas_diagnosis_graph.py  external_info_evolution_graph.py  methodology_kernel_graph.py
backend/app/schemas/: assistant.py  auth.py  dashboard.py  decision_case.py  diagnosis.py  expansion.py  feedback.py  methodology.py  project.py  system.py  task.py  tianji.py  tianji_bach.py  validation.py  workbench.py
backend/app/services/: assistant_service.py  auth_service.py  context_fusion_service.py  dashboard_service.py  decision_case_service.py  deposit_service.py  diagnosis_service.py  document_parser.py  embeddings.py  evidence_target.py  expansion_absorption_service.py  knowledge_graph_service.py  knowledge_version_service.py  llm.py  methodology_kernel_service.py  problem_routing_service.py  (+12 more)
backend/scripts/: kg_build.py  kg_export.py  kg_incremental.py  migrate_add_tenancy.py  migrate_sqlite_to_postgres.py  rebuild_vector_collections.py  recover_diagnosis_reports_from_tasks.py
backend/tests/: test_tianji_bach.py  test_tianji_bach_api.py  test_tianji_bach_p2_p4.py  test_tianji_deposit.py  test_tianji_project_history.py  test_tianji_simulation_service.py  test_validation_response_normalization.py  test_workbench_world_model.py
(+103 files in other folders)
