[project]
name = "imc-ipm-decision-agent"
version = "0.1.0"
description = "IMC&IPM 商业决策智能体后端：以港大 IMC&IPM 核心方法论为不可见思考内核的企业商业决策智能体 (MKE 算法)。"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.1.19",
  "qdrant-client>=1.9.1",
  "langgraph>=0.2.0",
  "openai>=1.30.0",
  "pymupdf>=1.24.0",
  "python-docx>=1.1.2",
  "python-pptx>=0.6.23",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
